# ion

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: crate-ci.yml  ion-fmt.yml  ion.yml  test.yml  workspace.yml
benches/: parse.rs
ion/: CHANGELOG.md  Cargo.toml  README.md
ion-fmt/: CHANGELOG.md  Cargo.toml  README.indexmap.md  README.md
ion-fmt/src/: columns_width.rs  display.rs  error.rs  lib.rs  main.rs
ion-fmt/tests/: cli_tests.rs
ion-fmt/tests/readme/: formatted.ion  unformatted.ion
ion-fmt/vscode-extension/: .vscodeignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  extension.js  language-configuration.json  package-lock.json  package.json
ion-fmt/vscode-extension/test/: runTest.js
ion-fmt/vscode-extension/test/suite/: formatOptions.test.js  index.js
ion-fmt/vscode-extension/test/unit/: getStyleArgs.test.js
ion/benches/: parse.rs
ion/src/: ion.rs  lib.rs  parser.rs
ion/src/ion/: display.rs  from_ion.rs  from_row.rs  ion_error.rs  section.rs  value.rs
ion/tests/expected/: hotel.indexmap.ion  test.indexmap.ion
src/: ion.rs  lib.rs  parser.rs
src/ion/: display.rs  from_ion.rs  from_row.rs  ion_error.rs  section.rs  value.rs
tests/: parse.rs
tests/data/: test.ion
tests/expected/: test.indexmap.ion  test.ion
