[package]
name = "ion"
version = "0.9.1"
description = "*.ion file parser"
edition = "2024"
license = "MIT"
homepage = "https://github.com/ion-rs/ion"
repository = "https://github.com/ion-rs/ion"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = { version = "1.0.0", default-features = false }
regex = { version = "1.3.3", default-features = false, features = ["std", "unicode"] }
pretty_assertions = "1"
test-case = "3"
indoc = "2"

[[bench]]
name = "parse"
harness = false
